# spelunker

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  mazerunner.cpp  mazetest.cpp
apps/: CMakeLists.txt  Executor.h  ProbabilisticExecutor.h  Utils.h  aldous_broder.cpp  app_test_braid.cpp  app_test_furthest_cells.cpp  app_test_roomfinder.cpp  app_test_squashedmaze.cpp  app_test_squashedthickmaze.cpp  app_test_squishedmaze.cpp  app_test_squishedthickmaze.cpp  app_test_symmetry.cpp  app_test_thickbraid.cpp  app_test_unicursal.cpp  bfs.cpp  binarytree.cpp  cellular_automaton.cpp  dfs.cpp  eller.cpp  grid_colouring.cpp  growing_tree.cpp  hunt_and_kill.cpp  kruskal.cpp  mazerunner.cpp  prim.cpp  prim2.cpp  recursive_division.cpp  sidewinder.cpp  test_braid.cpp  test_homomorphisms.cpp  test_isomorphism.cpp  test_symmetry.cpp  test_thickbraid.cpp  test_thickify.cpp  test_unicursal.cpp  testthick.cpp  wilson.cpp
gui/: CMakeLists.txt  MazeWidget.cpp  MazeWidget.h  MazeWidgetTest.cpp  README.md  ThickMazeWidget.cpp  ThickMazeWidget.h  ThickMazeWidgetTest.cpp  mazerunner.cpp
src/: ASCIIMazeRenderer.cpp  ASCIIMazeRenderer.h  AldousBroderMazeGenerator.cpp  AldousBroderMazeGenerator.h  BFSMazeGenerator.cpp  BFSMazeGenerator.h  BinaryTreeMazeGenerator.cpp  BinaryTreeMazeGenerator.h  CMakeLists.txt  CellularAutomatonThickMazeGenerator.cpp  CellularAutomatonThickMazeGenerator.h  DFSMazeGenerator.cpp  DFSMazeGenerator.h  DefaultRNG.cpp  DefaultRNG.h  DisjointSetHelper.h  EllerMazeGenerator.cpp  EllerMazeGenerator.h  Exceptions.h  FullMaze.h  GrowingTreeMazeGenerator.cpp  GrowingTreeMazeGenerator.h  Homomorphism.h  HuntAndKillMazeGenerator.cpp  HuntAndKillMazeGenerator.h  KruskalMazeGenerator.cpp  KruskalMazeGenerator.h  Maze.cpp  Maze.h  MazeAttributes.h  MazeGenerator.cpp  MazeGenerator.h  MazeRenderer.h  Prim2MazeGenerator.cpp  Prim2MazeGenerator.h  PrimMazeGenerator.cpp  PrimMazeGenerator.h  RNG.cpp  RNG.h  RandomizedDFSMazeGenerator.cpp  (+30 more)
src/graphmaze/: CMakeLists.txt  GraphMaze.cpp  GraphMaze.h  GraphMazeAttributes.h  GraphMazeTypeclasses.h  README.md
src/math/: CMakeLists.txt  DefaultRNG.h  MathUtils.cpp  MathUtils.h  Partition.cpp  Partition.h  RNG.cpp  RNG.h
src/maze/: AldousBroderMazeGenerator.cpp  AldousBroderMazeGenerator.h  BFSMazeGenerator.cpp  BFSMazeGenerator.h  BinaryTreeMazeGenerator.cpp  BinaryTreeMazeGenerator.h  CMakeLists.txt  DFSMazeGenerator.cpp  DFSMazeGenerator.h  EllerMazeGenerator.cpp  EllerMazeGenerator.h  GrowingTreeMazeGenerator.cpp  GrowingTreeMazeGenerator.h  HuntAndKillMazeGenerator.cpp  HuntAndKillMazeGenerator.h  KruskalMazeGenerator.cpp  KruskalMazeGenerator.h  Maze.cpp  Maze.h  MazeAttributes.cpp  MazeAttributes.h  MazeGenerator.cpp  MazeGenerator.h  MazeGeneratorSignalDescriptors.h  MazeRenderer.h  MazeStatistics.cpp  MazeStatistics.h  MazeTypeclasses.h  Prim2MazeGenerator.cpp  Prim2MazeGenerator.h  PrimMazeGenerator.cpp  PrimMazeGenerator.h  README.md  RecursiveDivisionMazeGenerator.cpp  RecursiveDivisionMazeGenerator.h  SidewinderMazeGenerator.cpp  SidewinderMazeGenerator.h  StringMazeRenderer.cpp  StringMazeRenderer.h  WilsonMazeGenerator.cpp  (+1 more)
src/squashedmaze/: CMakeLists.txt  README.md  RoomFinder.cpp  RoomFinder.h  SquashedMaze.cpp  SquashedMaze.h  SquashedMazeAttributes.h
src/test/: CMakeLists.txt  TestMaze.cpp  main.cpp  run_tests.sh  section.cpp
src/test/maze/: CMakeLists.txt  MazeGenerators.h  TestMaze.cpp  TestMazeBraiding.cpp  TestMazeSymmetries.cpp  TestRankPosition.cpp  TestUnrankWallMap.cpp
src/test/squashedmaze/: CMakeLists.txt  TestRoomFinder.cpp  TestRoomFinderMaze.cpp  TestRoomFinderThickMaze.cpp  TestSquashedMaze.cpp  TestSquashedThickMaze.cpp
src/test/thickmaze/: CMakeLists.txt  TestThickMaze.cpp  TestThickMazeBraiding.cpp  TestThickMazeSymmetries.cpp  ThickMazeGenerators.h
src/test/types/: CMakeLists.txt  TestBFSMaze.cpp  TestBFSThickMaze.cpp  TestDimensions2D.cpp  TestDirection.cpp  TestSymmetry.cpp  TestTransformation.cpp
src/thickmaze/: CMakeLists.txt  CellularAutomatonThickMazeGenerator.cpp  CellularAutomatonThickMazeGenerator.h  GridColouring.cpp  GridColouring.h  GridColouringThickMazeGenerator.cpp  GridColouringThickMazeGenerator.h  README.md  StringThickMazeRenderer.cpp  StringThickMazeRenderer.h  ThickMaze.cpp  ThickMaze.h  ThickMazeAttributes.cpp  ThickMazeAttributes.h  ThickMazeGenerator.cpp  ThickMazeGenerator.h  ThickMazeGeneratorByHomomorphism.cpp  ThickMazeGeneratorByHomomorphism.h  ThickMazeRenderer.h  ThickMazeTypeclasses.h
src/typeclasses/: CMakeLists.txt  Homomorphism.h  README.md  Show.h
src/types/: AbstractMaze.cpp  AbstractMaze.h  AbstractMazeGenerator.cpp  AbstractMazeGenerator.h  BraidableMaze.h  CMakeLists.txt  CommonMazeAttributes.cpp  CommonMazeAttributes.h  Dimensions2D.cpp  Dimensions2D.h  Direction.cpp  Direction.h  DisjointSetHelper.h  Exceptions.h  Observable.h  Observer.h  ReversibleMaze.h  Symmetry.cpp  Symmetry.h  TransformableMaze.h  Transformation.cpp  Transformation.h  UnicursalizableMaze.h
